# django-poetry-test

./: db.sqlite3  pyproject.toml  render.yaml  requirements.txt
mysite/: settings.py  urls.py
projects/: models.py  views.py
projects/migrations/: 0001_initial.py  0002_project_url.py
static/img/favicon/: about.txt
staticfiles/: staticfiles.json
staticfiles/css/: homepage.b86005466343.css  homepage.css
templates/: index.html
